--- a/css/general.css
+++ b/css/general.css
@@ -1,34 +1,138 @@
 .container {
-  padding: 0 2rem;
-  margin: 0 auto;
+    padding: 0 2rem;
+    margin: 0 auto;
 }
 
 .grid {
-  display: grid;
-  column-gap: 6.4rem;
-  row-gap: 9.6rem;
+    display: grid;
+    column-gap: 6.4rem;
+    row-gap: 9.6rem;
 }
 
 .grid--sm {
-  display: grid;
-  column-gap: 5.4rem;
-  row-gap: 6rem;
+    display: grid;
+    column-gap: 5.4rem;
+    row-gap: 6rem;
 }
 
 .grid--no-column-gap {
-  display: grid;
-  row-gap: 6rem;
-  column-gap: 0;
+    display: grid;
+    row-gap: 6rem;
+    column-gap: 0;
 }
 
 .grid:not(:last-child) {
-  margin-bottom: 9.6rem;
+    margin-bottom: 9.6rem;
 }
 
 .margin-top--sm {
-  margin-top: 3.2rem;
+    margin-top: 3.2rem;
 }
 
 .margin-top--lg {
-  margin-top: 7rem;
+    margin-top: 7rem;
+}
+
+.center {
+    text-align: center;
+}
+
+.mobile {
+    display: none;
+}
+
+
+/* carousel
+    /* The dots/bullets/indicators */
+
+.dot {
+    cursor: pointer;
+    height: 15px;
+    width: 15px;
+    margin: 0 2px;
+    background-color: #bbb;
+    border-radius: 50%;
+    display: inline-block;
+    transition: background-color 0.6s ease;
+}
+
+.active,
+.dot:hover {
+    background-color: #717171;
+}
+
+
+/* Fading animation */
+
+.fade {
+    -webkit-animation-name: fade;
+    -webkit-animation-duration: 1.5s;
+    animation-name: fade;
+    animation-duration: 1.5s;
+}
+
+@-webkit-keyframes fade {
+    from {
+        opacity: .4
+    }
+    to {
+        opacity: 1
+    }
+}
+
+@keyframes fade {
+    from {
+        opacity: .4
+    }
+    to {
+        opacity: 1
+    }
+}
+
+
+/* Next & previous buttons */
+
+.prev,
+.next {
+    cursor: pointer;
+    position: absolute;
+    top: 50%;
+    width: auto;
+    margin-top: -22px;
+    padding: 16px;
+    color: black;
+    font-weight: bold;
+    font-size: 18px;
+    transition: 0.6s ease;
+    border-radius: 0 3px 3px 0;
+    user-select: none;
+}
+
+
+/* Position the "next button" to the right */
+
+.next {
+    right: 0;
+    border-radius: 3px 0 0 3px;
+}
+
+
+/* On hover, add a black background color with a little bit see-through */
+
+.prev:hover,
+.next:hover {
+    background-color: rgba(0, 0, 0, 0.8);
+    color: white;
+}
+
+
+/* carousel */
+
+@media only screen and (max-width: 1200px) {
+    .desktop {
+        display: none;
+    }
+    .mobile {
+        display: block;
+    }
 }
