--- a/css/base.css
+++ b/css/base.css
@@ -6,10 +6,9 @@
 
 :root {
   --main-color: #00ade5;
-
+  --secondary-color: #0799DC;
   --background-color-1: #000000d4;
   --background-color-2: #bbb;
-
   --grey-dark: #333;
   --grey-light: #f2f2f2;
   --white: #fff;
