--- a/css/queries.css
+++ b/css/queries.css
@@ -4,6 +4,12 @@
   .pt-4 {
     padding-top: 10rem;
   }
+  
+  .footer .content {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  gap: 1rem;
+}
 }
 
 @media screen and (min-width: 768px) {
