--- a/css/styles.css
+++ b/css/styles.css
@@ -107,3 +107,125 @@ p.count_p {
 }
 
 /* testimonials */
+
+
+
+/*	#	FOOTER	#	*/
+.footer {
+    padding: 6rem 0;
+    background-color: var(--secondary-color);
+  }
+  
+  .footer-container {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 2.4rem;
+  }
+  
+.footer .content {
+  /* display: grid; */
+  /* grid-template-columns: 1fr 1fr 1fr; */
+  /* gap: 1rem; */
+  box-shadow: 0 2.4rem 4.8rem rgba(0, 0, 0, 0.15);
+  border-radius: 1rem;
+  text-align: center;
+  color: var(--white);
+}
+
+.footer .content div {
+	margin-bottom: 4rem;
+}
+
+.footer h6 {
+  margin-bottom: 1em;
+  font-size: 2.5rem;
+  font-weight: 600;
+}
+
+.footer p {
+  font-size: 1.5rem;
+  margin-bottom: 1.5em;
+}
+
+.footer .button {
+    background-color: var(--white);
+    border-radius: 0;
+    border-top-left-radius: 0;
+    border-bottom-left-radius: 0;
+    padding: 0.8rem 1.2rem;
+    border: 0;
+    cursor: pointer;
+    display: inline-block;
+    vertical-align: middle;
+    text-align: center;
+    white-space: nowrap;
+    user-select: none;
+    font-size: 1rem;
+    line-height: 1.5;
+    transition: color .15s ease-in-out , background-color .15s ease-in-out , border-color .15s ease-in-out , box-shadow .15s ease-in-out;
+}
+
+.arrow {
+  border: solid var(--secondary-color);
+  border-width: 0 3px 3px 0;
+  display: inline-block;
+  padding: 0.3rem;
+}
+
+.right {
+  transform: rotate(-45deg);
+  -webkit-transform: rotate(-45deg);
+}
+
+.footer ul {
+  list-style: none;
+}
+
+.footer ul li {
+  margin-bottom: 1rem;
+  font-size: 1.5rem;
+}
+
+.footer input {
+  display: inline-block;
+  vertical-align: middle;
+  border: none;
+  width: 70%!important;
+  background: #f9f9ff;
+  color: var(--secondary-color);
+  border-radius: 0;
+  font-size: 1.4rem;
+  padding: 0.55em;
+  transition: border-color .15s ease-in-out , box-shadow .15s ease-in-out;
+}
+
+.footer .centre-box li {
+  margin: 0 auto;
+}
+
+.footer ul li a {
+  color: var(--white);
+  text-decoration: none;
+}
+
+  .social-links {
+    list-style: none;
+    display: flex;
+    gap: 2.4rem;
+  }
+  
+  .social-icon {
+    height: 4rem;
+    width: 4rem;
+    color: var(--white);
+    transition: all 0.3s ease;
+  }
+  
+  .social-icon:hover {
+    transform: scale(1.3);
+  }
+  
+  
+/*	#	END FOOTER	#	*/
