--- a/css/styles.css
+++ b/css/styles.css
@@ -2,3 +2,27 @@ article {
   text-align: center;
   font-size: 1.6rem;
 }
+
+.header {
+  background-color: #01ade5;
+}
+
+.servicesHeader {
+  width: 100%;
+  text-align: center;
+  font-size: 25px;
+  color: white;
+  font-family: "Rubik", sans-serif;
+  font-weight: bold
+}
+
+
+.testi_images {
+  width: 60%;
+}
+.h2-color {
+  color: white;
+  font-family: "Rubik", sans-serif;
+  padding-top: 5px;
+  font-size: 17px;
+}
