--- a/css/base.css
+++ b/css/base.css
@@ -10,6 +10,8 @@
   --background-color-1: #000000d4;
   --background-color-2: #bbb;
 
+  --text-color-dark: #01579B;
+
   --grey-dark: #333;
   --grey-light: #f2f2f2;
   --white: #fff;
