--- a/css/styles.css
+++ b/css/styles.css
@@ -127,3 +127,21 @@ p.count_p {
   padding-top: 5px;
   font-size: 17px;
 }
+
+.servicesExploreMore {
+  background-color : var(--white);
+  padding: 1% 3%;
+  font-family: "Rubik", sans-serif;
+  font-weight: bold;
+  text-decoration: none;
+  color: var(--text-color-dark);
+  font-size: 2rem;
+  box-shadow: 0px 1px 10px 0px var(--text-color-dark);
+  border-radius: 5px;
+  transition: 0.5s
+}
+
+.servicesExploreMore:hover {
+  box-shadow: 0px 1px 10px 5px var(--text-color-dark);
+  border-radius: 5px 15px 5px 15px;
+}
