Add footer section

--- a/css/base.css
+++ b/css/base.css
@@ -6,6 +6,7 @@
 
 :root {
   --main-color: #00ade5;
+  --secondary-color: #0799DC;
 
   --background-color-1: #000000d4;
   --background-color-2: #bbb;
