--- a/css/queries.css
+++ b/css/queries.css
@@ -10,6 +10,10 @@
   grid-template-columns: 1fr 1fr 1fr;
   gap: 1rem;
 }
+
+.social-links {
+width: auto;
+}
 }
 
 @media screen and (min-width: 768px) {
