--- a/css/base.css
+++ b/css/base.css
@@ -6,6 +6,11 @@
 
 :root {
   --main-color: #00ade5;
+  --main-color-shade-1: #009cce;
+  --main-color-shade-2: #008ab7;
+
+  --main-color-tint-1: #e6f7fc;
+  --main-color-tint-2: #cceffa;
 
   --background-color-1: #000000d4;
   --background-color-2: #bbb;
@@ -13,6 +18,7 @@
   --grey-dark: #333;
   --grey-light: #f2f2f2;
   --white: #fff;
+  --black: #000;
 }
 
 html {
