--- a/css/general.css
+++ b/css/general.css
@@ -6,7 +6,7 @@
 .grid {
   display: grid;
   column-gap: 6.4rem;
-  row-gap: 9.6rem;
+  row-gap: 6.6rem;
 }
 
 .grid--sm {
@@ -19,6 +19,14 @@
   display: grid;
   row-gap: 6rem;
   column-gap: 0;
+}
+
+.grid--align-center {
+  align-items: center;
+}
+
+.grid--justify-center {
+  justify-content: center;
 }
 
 .grid:not(:last-child) {
@@ -41,9 +49,85 @@
   text-align: center;
 }
 
-/* .mobile {
-  display: none;
-} */
+.title {
+  display: block;
+  font-size: 2rem;
+  font-weight: 500;
+  color: var(--main-color-shade-1);
+  text-transform: uppercase;
+  margin-bottom: 1.6rem;
+  letter-spacing: 0.75px;
+  text-align: center;
+
+  position: relative;
+}
+
+.title::after {
+  content: "";
+  position: absolute;
+  height: 3px;
+  width: 18rem;
+  background-color: var(--main-color-shade-1);
+  bottom: -1rem;
+  left: 50%;
+  transform: translateX(-50%);
+}
+
+/* buttons */
+
+.btn,
+.btn:link,
+.btn:visited {
+  display: inline-block;
+  text-decoration: none;
+  font-size: 2rem;
+  font-weight: 600;
+  border-radius: 9px;
+  text-align: center;
+
+  cursor: pointer;
+  font-family: inherit;
+  border: none;
+
+  transition: all 0.3s;
+}
+
+.btn--sm:link,
+.btn--sm:visited {
+  font-size: 1.6rem;
+}
+
+.btn--padding-sm:link,
+.btn--padding-sm:visited {
+  padding: 1.2rem 2.4rem;
+}
+
+.btn--padding-lg:link,
+.btn--padding-lg:visited {
+  padding: 1.6rem 3.2rem;
+}
+
+.btn--full:link,
+.btn--full:visited {
+  background-color: var(--main-color);
+  color: var(--white);
+  border: 2px solid var(--main-color);
+}
+
+.btn--full:hover,
+.btn--full:active {
+  background-color: var(--white);
+  color: var(--main-color);
+  border: 2px solid var(--main-color);
+}
+
+.btn--disabled:link,
+.btn--disabled:visited {
+  pointer-events: none;
+  cursor: default;
+  border: 2px solid var(--grey-light);
+  background-color: var(--grey-light);
+}
 
 /* carousel
     /* The dots/bullets/indicators */
