--- a/css/queries.css
+++ b/css/queries.css
@@ -114,6 +114,7 @@
   .nav-header-container {
     width: 85%;
   }
+
 }
 
 @media screen and (min-width: 1200px) {
@@ -132,6 +133,9 @@
     width: 80%;
   }
 
+
+}
+@media screen and (min-width: 1350px) {
   .testimonials {
     background-size: cover;
   }
