--- a/css/projects/queries.css
+++ b/css/projects/queries.css
@@ -1,5 +1,7 @@
-@media only screen and (max-width: 600px) {
- .proj-card{
-  height: 325px;
- }
+@media screen and (min-width: 1200px) {
+  .proj-card {
+    width: auto;
+    height: 27rem;
+    justify-self: normal;
+  }
 }
