Added contact us page

--- a/css/general.css
+++ b/css/general.css
@@ -219,3 +219,11 @@
 .padding-top-sm {
   padding-top: 3.2rem;
 }
+
+.padding-right-sm {
+    padding-right: 2rem;
+}
+
+.font-size-sm {
+    font-size: 1.3rem;
+}
