--- a/css/contactus/styles.css
+++ b/css/contactus/styles.css
@@ -1,16 +1,16 @@
 .header-contactus {
-    background-image: linear-gradient(
-        to right,
-        rgba(0, 0, 0, 0.7),
-        rgba(0, 0, 0, 0.7)
+  background-image: linear-gradient(
+      to right,
+      rgba(0, 0, 0, 0.7),
+      rgba(0, 0, 0, 0.7)
     ),
     url("../../images/cta/contact-us-banner-1.jpeg");
 }
 
 .contactus-main {
-    padding: 3rem;
-    border-left: 2px solid var(--main-color-shade-2);
-    border-right: 2px solid var(--main-color-shade-2);
+  padding: 3rem;
+  border-left: 2px solid var(--main-color-shade-2);
+  border-right: 2px solid var(--main-color-shade-2);
 }
 
 .container-cta {
@@ -28,8 +28,8 @@
   border-radius: 11px;
   background-image: linear-gradient(
     90deg,
-    var(--main-color),
-    var(--main-color-tint7)
+    var(--main-color-tint-2),
+    var(--main-color-tint-1)
   );
   overflow: hidden;
 }
@@ -40,7 +40,7 @@
 }
 
 .cta-text-title {
-  font-size: 3.0rem;
+  font-size: 3rem;
   line-height: 1.2;
   margin-bottom: 1.6rem;
   color: var(--grey-white);
@@ -93,7 +93,7 @@
 .cta-input input:valid,
 .cta-input textarea:valid {
   background: url("../../images/cta/check.jpg");
-  background-color: var(--color-white);
+  background-color: var(--white);
   background-size: 2rem;
   background-repeat: no-repeat;
   background-position: right;
@@ -125,8 +125,8 @@
 }
 
 .container-cta .cta-iframe {
-    width:100%;
-    height: 25rem;
-    box-shadow: 0.1px 0.1px 3px;
-    border-radius: 0.6rem;
+  width: 100%;
+  height: 25rem;
+  box-shadow: 0.1px 0.1px 3px;
+  border-radius: 0.6rem;
 }
