Add Services page

--- a/css/styles.css
+++ b/css/styles.css
@@ -345,10 +345,32 @@ p.count_p {
 .servicesHeader {
   width: 100%;
   text-align: center;
-  font-size: 25px;
-  color: white;
+  font-size: 3rem;
+  color: var(--white);
   font-family: "Rubik", sans-serif;
   font-weight: bold;
+}
+
+.services-link {
+  text-decoration: none;
+}
+
+.services-link .social-icon {
+    border: 2px solid var(--white);
+    border-radius: 2rem;
+    padding: 2rem 3rem;
+    height: 8rem;
+    width: 8rem;
+    color: var(--white);
+    transition: all 0.3s ease;
+}
+
+.services-link .social-icon:hover {
+  transform: scale(1.2);
+}
+
+.services-link .h2-color {
+  padding-top: 2rem;
 }
 
 .h2-color {
@@ -378,7 +400,7 @@ p.count_p {
 
 /*	#	FOOTER	#	*/
 .footer {
-  padding: 6rem 0;
+  padding: 4rem 0 0 0;
   background-color: var(--secondary-color);
 }
 
@@ -413,6 +435,7 @@ p.count_p {
 .footer p {
   font-size: 1.5rem;
   margin-bottom: 1.5em;
+  color:  var(--white);
 }
 
 .footer .button {
