--- a/css/services/queries.css
+++ b/css/services/queries.css
@@ -1,47 +1,36 @@
 /* rem won't work in media queries. Instead use pixels or em (1em = 16px) */
-
-@media only screen and (min-width: 576px) {
+@media screen and (min-width: 576px) {
+  .offer-list {
+    flex-direction: row;
+  }
+  .offer-list li {
+    max-width: 50%;
+  }
 }
 
 @media screen and (min-width: 768px) {
-  /* .section-choose-us {
-    background: linear-gradient(
-      90deg,
-      var(--grey-dark) 35%,
-      var(--main-color-tint-1) 35%
-    );
+  section {
+    padding: 0 2em;
   }
-} */
+  .column {
+    flex: 0 50%;
+    max-width: 50%;
+  }
+}
 
 @media screen and (min-width: 992px) {
-  /* .grid {
-    grid-template-columns: repeat(2, 1fr);
-    column-gap: 2rem;
-  } */
+  section {
+    padding: 1em;
+  }
+  .column {
+    flex: 0 0 33.33%;
+    max-width: 33.33%;
+  }
 }
 
 @media screen and (min-width: 1200px) {
-  /* .team {
-    min-width: auto;
-    justify-self: normal;
-  } */
   .grid {
     grid-template-columns: 0.6fr 1fr;
     column-gap: 2rem;
   }
-
-
-  /* .quality-card {
-    width: 17rem;
-    height: 22rem;
-  }
-
-  .quality-icon i {
-    padding: 4rem;
-  }
-
-  .quality-description {
-    font-size: 1rem;
-  } */
-}
 }
