--- a/css/queries.css
+++ b/css/queries.css
@@ -15,6 +15,10 @@
     display: none;
   }
 
+  .nav-header {
+    flex-direction: column;
+  }
+
   .navbar {
     background-color: inherit;
     position: inherit;
@@ -31,6 +35,7 @@
 
   .menu {
     flex-direction: row;
+    gap: 0;
   }
 
   .hero-text-box {
@@ -104,6 +109,10 @@
   }
   .pt-4 {
     padding-top: 15rem;
+  }
+
+  .nav-header {
+    flex-direction: row;
   }
 
   .nav-header-container {
