--- a/css/styles.css
+++ b/css/styles.css
@@ -126,7 +126,7 @@
   list-style: none;
   display: flex;
   align-items: center;
-  /* gap: 2rem; */
+  gap: 2rem;
   flex-direction: column;
 }
 
@@ -356,13 +356,13 @@ p.count_p {
 }
 
 .services-link .social-icon {
-    border: 2px solid var(--white);
-    border-radius: 2rem;
-    padding: 2rem 3rem;
-    height: 8rem;
-    width: 8rem;
-    color: var(--white);
-    transition: all 0.3s ease;
+  border: 2px solid var(--white);
+  border-radius: 2rem;
+  padding: 2rem 3rem;
+  height: 8rem;
+  width: 8rem;
+  color: var(--white);
+  transition: all 0.3s ease;
 }
 
 .services-link .social-icon:hover {
@@ -435,7 +435,7 @@ p.count_p {
 .footer p {
   font-size: 1.5rem;
   margin-bottom: 1.5em;
-  color:  var(--white);
+  color: var(--white);
 }
 
 .footer .button {
