--- a/css/styles.css
+++ b/css/styles.css
@@ -48,7 +48,7 @@
       rgba(0, 0, 0, 0.5),
       rgba(0, 0, 0, 0.5)
     ),
-    url("../images/hero-bg.jpg");
+    url("../images/home/hero-bg.jpg");
   background-size: cover;
   background-position: bottom;
   background-repeat: no-repeat;
@@ -233,7 +233,7 @@ p.count_p {
 }
 
 .counter_sec {
-  background-image: url("../images/counter.jpg");
+  background-image: url("../images/home/counter.jpg");
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
@@ -250,7 +250,7 @@ p.count_p {
 /* testimonials */
 
 .testimonials {
-  background-image: url("../images/testimonials.png");
+  background-image: url("../images/home/testimonials.png");
   background-repeat: no-repeat;
   background-size: contain;
   min-height: 350px;
