refinements in testimonials and added padding-bottom in footer on mobile screen

--- a/css/styles.css
+++ b/css/styles.css
@@ -258,6 +258,40 @@ p.count_p {
   background-color: var(--main-color);
 }
 
+blockquote {
+  border: none;
+  margin: 0;
+  padding-top: 2rem;
+  padding-bottom: 3rem;
+}
+
+blockquote .testi--text {
+  margin: 0;
+  position: relative;
+}
+
+blockquote .testi--text::before,
+blockquote .testi--text:after {
+  font-family: Georgia, "Times New Roman", Times, serif;
+  font-weight: bold;
+  font-size: 4.6rem;
+  color: var(--main-color);
+  position: absolute;
+}
+
+blockquote .testi--text::before {
+  content: open-quote;
+  display: block;
+  top: -3rem;
+}
+
+blockquote .testi--text:after {
+  content: close-quote;
+  display: inline-block;
+  bottom: -5rem;
+  right: 1rem;
+}
+
 /* CAROUSEL */
 .desktop {
   display: none;
@@ -284,6 +318,21 @@ p.count_p {
   padding: 1rem;
   text-align: justify;
   line-height: 1.5;
+  font-size: 1.1rem;
+}
+
+.testi_name {
+  text-align: right;
+  padding: 1rem 1rem 0 0;
+  font-weight: 600;
+  font-size: 1.6rem;
+}
+
+.testi_title {
+  text-align: right;
+  padding: 1rem;
+  color: var(--grey-light-medium);
+  font-size: 1.4rem;
 }
 
 .pt-4 {
@@ -400,7 +449,7 @@ p.count_p {
 
 /*	#	FOOTER	#	*/
 .footer {
-  padding: 4rem 0 0 0;
+  padding: 4rem 0 2rem 0;
   background-color: var(--secondary-color);
 }
 
@@ -413,9 +462,6 @@ p.count_p {
 }
 
 .footer .content {
-  /* display: grid; */
-  /* grid-template-columns: 1fr 1fr 1fr; */
-  /* gap: 1rem; */
   box-shadow: 0 2.4rem 4.8rem rgba(0, 0, 0, 0.15);
   border-radius: 1rem;
   text-align: center;
