--- a/css/queries.css
+++ b/css/queries.css
@@ -51,6 +51,10 @@
     font-size: 1.6rem;
   }
 
+  .footer {
+    padding: 4rem 0 0 0;
+  }
+
   .footer .content {
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
@@ -63,9 +67,6 @@
 }
 
 @media screen and (min-width: 768px) {
-  /* html {
-    font-size: 75%;
-  } */
   body {
     width: 90%;
   }
@@ -76,9 +77,6 @@
   .grid--2-cols {
     grid-template-columns: repeat(2, 1fr);
   }
-  /* .nav-header {
-    padding: 2.4rem;
-  } */
 
   /* CAROUSEL */
   .desktop {
@@ -91,6 +89,10 @@
 
   .nav-header-container {
     width: 90%;
+  }
+
+  .testi_name {
+    padding: 0 1rem 0 0;
   }
 }
 
@@ -134,5 +136,11 @@
 
   .nav-header-container {
     width: 80%;
+  }
+}
+
+@media screen and (min-width: 1400px) {
+  .testimonials {
+    background-size: cover;
   }
 }
