--- a/css/base.css
+++ b/css/base.css
@@ -18,9 +18,12 @@
   --background-color-2: #bbb;
 
   --text-color-dark: #01579b;
+  --text-color-dark-1: #1f194c;
+  --text-color-light-1: #575a7b;
 
   --grey-dark: #333;
   --grey-light: #f2f2f2;
+  --grey-light-1: #f0f0f0;
   --grey-light-medium: #a2a2a2;
   --white: #fff;
   --black: #000;
