--- a/css/careers/queries.css
+++ b/css/careers/queries.css
@@ -1,6 +1,9 @@
 /* Mobile Responsive */
 
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 767px) {
+  .careers-container {
+    border: none;
+  }
   .main__container {
     display: grid;
     grid-template-columns: auto;
