--- a/css/styles.css
+++ b/css/styles.css
@@ -170,9 +170,13 @@
 .hero {
   align-items: flex-end;
   justify-items: center;
-  height: 60vh;
+  height: 70vh;
   text-align: center;
   padding: 0 0.5rem;
+}
+
+.hero-60vh {
+  height: 60vh;
 }
 
 .hero-img {
@@ -238,13 +242,6 @@ p.count_p {
   background-repeat: no-repeat;
   background-size: cover;
 }
-
-/* .coun-text {
-  color: #fff;
-  font-size: 35px;
-  font-weight: bold;
-} */
-
 /* counter */
 
 /* testimonials */
@@ -344,6 +341,9 @@ blockquote .testi--text:after {
 .pb-2 {
   padding-bottom: 2rem;
 }
+.pb-3 {
+  padding-bottom: 3rem;
+}
 
 /* Slideshow container */
 
@@ -371,12 +371,11 @@ blockquote .testi--text:after {
   text-align: center;
 }
 
+/* projects */
 .projects {
   padding: 5.6rem 0;
 }
 
-/* testimonials */
-/* projects */
 .proj_image {
   width: 100%;
 }
@@ -384,6 +383,10 @@ blockquote .testi--text:after {
 .proj--title {
   padding-top: 1rem;
   color: var(--main-color-shade-1);
+}
+
+.projects h2 {
+  font-size: 3rem;
 }
 /* projects */
 
