--- a/css/careers/queries.css
+++ b/css/careers/queries.css
@@ -1,9 +1,11 @@
 /* Mobile Responsive */
-
-@media screen and (max-width: 767px) {
+@media screen and (max-width: 1200px) {
   .careers-container {
     border: none;
   }
+}
+
+@media screen and (max-width: 767px) {
   .main__container {
     display: grid;
     grid-template-columns: auto;
